--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>HR Helpline – Burma Burma</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <!-- Favicon: Burma Burma logo -->
+  <link rel="icon" type="image/png" href="Copy%20of%20BB_Logo_Display-01.png" />
+
   <!-- Bootstrap 5 CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -251,9 +254,8 @@
                   <select id="department" class="form-select">
                     <option value="">Loading departments...</option>
                   </select>
-                  <small class="text-muted" id="deptHint">
-                    Departments are loaded from the "Dept &amp; Desig" sheet.
-                  </small>
+                  <!-- hint hidden now -->
+                  <small class="text-muted" id="deptHint" style="display:none;"></small>
                 </div>
 
                 <div class="col-md-6">
@@ -302,7 +304,7 @@
                 <label for="fileInput" class="form-label">Attach Document (optional)</label>
                 <input class="form-control" type="file" id="fileInput" />
                 <small class="text-muted">
-                  Accepted: PDF, DOC, TXT, JPG, PNG (Max 10 MB). Only the file name is stored in the sheet.
+                  Accepted: PDF, DOC, TXT, JPG, PNG (Max 10 MB). File will be stored securely in HR Drive.
                 </small>
               </div>
 
@@ -344,9 +346,6 @@
       </div>
     </div>
   </div>
-
-  <!-- Hidden iframe for form submission (avoids CORS on POST) -->
-  <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
 
   <!-- Bootstrap JS -->
   <script
