Update query options in index.html

--- a/index.html
+++ b/index.html
@@ -270,11 +270,10 @@
                   <select id="queryType" class="form-select">
                     <option value="">Select Query Type</option>
                     <option value="Salary">Salary</option>
-                    <option value="SC">SC (Special Consideration)</option>
+                    <option value="SC">SC (Service Charge)</option>
                     <option value="POSH">POSH (Prevention of Sexual Harassment)</option>
                     <option value="Refer a Friend">Refer a Friend</option>
-                    <option value="Leave Management">Leave Management</option>
-                    <option value="Benefits & Compensation">Benefits & Compensation</option>
+                    <option value="Benefits & Compensation">Policy Benefits & Requests</option>
                     <option value="Other">Other</option>
                   </select>
                 </div>
