Update favicon and logo image references

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Favicon: Burma Burma logo -->
-  <link rel="icon" type="image/png" href="Copy%20of%20BB_Logo_Display-01.png" />
+  <link rel="icon" type="image/png" href="BB_Logo_Cropped.png" />
 
   <!-- Bootstrap 5 CSS -->
   <link
@@ -207,7 +207,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-9">
         <div class="text-center mb-4">
-          <img src="Copy%20of%20BB_Logo_Display-01.png" alt="Burma Burma Logo" class="bb-logo mb-2" />
+          <img src="BB_Logo_Cropped.png" alt="Burma Burma Logo" class="bb-logo mb-2" />
           <div class="page-title">HR Helpline</div>
           <div class="page-subtitle">Query &amp; Request Management System</div>
         </div>
