Update favicon link in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Favicon: Burma Burma logo -->
-  <link rel="icon" type="image/png" href="Copy%20of%20BB_Logo_Display-01.png" />
+  <link rel="icon" type="image/png" href="BB_Logo_favicon.png" />
 
   <!-- Bootstrap 5 CSS -->
   <link
