Enhance favicon support with multiple sizes
Added multiple favicon links for different resolutions and added an apple-touch-icon.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
   <title>HR Helpline – Burma Burma</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Favicon: Burma Burma logo -->
-  <link rel="icon" type="image/png" href="BB_Logo_favicon.png" />
+  <!-- Favicon: Burma Burma logo --!-- High-resolution Favicon -->
+<link rel="icon" type="image/png" href="BB_Logo_favicon.png" sizes="512x512">
+<link rel="icon" type="image/png" href="BB_Logo_favicon.png" sizes="256x256">
+<link rel="icon" type="image/png" href="BB_Logo_favicon.png" sizes="128x128">
+<link rel="icon" type="image/png" href="BB_Logo_favicon.png" sizes="32x32">
+
+<!-- Apple / iPhone -->
+<link rel="apple-touch-icon" href="BB_Logo_favicon.png">
+
 
   <!-- Bootstrap 5 CSS -->
   <link
