Update HR Helpline title and subtitle

--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
       <div class="col-lg-9">
         <div class="text-center mb-4">
           <img src="BB_Logo_Cropped.png" alt="Burma Burma Logo" class="bb-logo mb-2" />
-          <div class="page-title">HR Helpline</div>
-          <div class="page-subtitle">Query &amp; Request Management System</div>
+          <div class="page-title">Burma Burma HR Helpline</div>
+          <div class="page-subtitle">Your confidential gateway for HR assistance, requests, and guidance.</div>
         </div>
 
         <div class="card card-helpline">
