--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>HR Helpline – Burma Burma</title>
+  <title>Burma Burma | HR Helpline</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Favicon: Burma Burma logo --!-- High-resolution Favicon -->
