--- a/index.html
+++ b/index.html
@@ -257,6 +257,16 @@
                 </div>
 
                 <div class="col-md-6">
+                  <label for="employeeEmail" class="form-label">Employee Email</label>
+                  <input
+                    type="email"
+                    id="employeeEmail"
+                    class="form-control"
+                    placeholder="yourname@burmaburma.in"
+                  />
+                </div>
+                
+                <div class="col-md-6">
                   <label for="department" class="form-label">Department</label>
                   <select id="department" class="form-select">
                     <option value="">Loading departments...</option>
