Update page title and query type options

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <div class="col-lg-9">
         <div class="text-center mb-4">
           <img src="BB_Logo_Cropped.png" alt="Burma Burma Logo" class="bb-logo mb-2" />
-          <div class="page-title">Burma Burma HR Helpline</div>
+          <div class="page-title">My HR Support</div>
           <div class="page-subtitle">Your confidential gateway for HR assistance, requests, and guidance.</div>
         </div>
 
@@ -287,10 +287,9 @@
                   <select id="queryType" class="form-select">
                     <option value="">Select Query Type</option>
                     <option value="Salary">Salary</option>
-                    <option value="SC">SC (Service Charge)</option>
+                    <option value="SC">Service Charge</option>
                     <option value="POSH">POSH (Prevention of Sexual Harassment)</option>
                     <option value="Refer a Friend">Refer a Friend</option>
-                    <option value="Benefits & Compensation">Policy Benefits & Requests</option>
                     <option value="Other">Other</option>
                   </select>
                 </div>
